2005-03-16  Benhur Stein <benhur@inf.ufsm.br>
	* Traces: added directory
	* Traces/JavaTest.trace: small trace example added

2005-03-06  Benhur Stein <benhur@inf.ufsm.br>
	* EntityTypeFilter/EntityTypeSelector.m, ImbricationFilter/InsetLimit.m,
	  OrderFilter/Order.m, ReductionFilter/BusyNode.m,
	  Paje/PajeController.[hm], Paje/PajeTraceController.m: implemented
	  support for saving/loading filter configuration. Configuration is
	  saved/loaded for file /tmp/pajeconfig. Missing FieldFilter, the
	  possibility of naming configurations, a configuration editor (loading
	  and unloading of filters, more than one filter of the same type, etc.
	* General/PajeFilter.[hm]: added helper methods -entityTypeWithName:
	  and -containerWithName:type:
	* General/HierarchyBrowser.m: some better support for when updating 
	  last column (still does not work in all cases)
	* ImbricationFilter/InsetLimit.[hm]: added a cache for increased
	  performance (not measured)

2005-02-21  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeFilter.h: add some documentation.

2005-02-17  Benhur Stein <benhur@inf.ufsm.br>
	* General/DataScanner.m: hack to read numbers from trace file in
	  a locale independent way (solves bug #303193).

2005-02-17  Benhur Stein <benhur@inf.ufsm.br>
	* Allow files with any extension to be selected in the open file
	  panel.

2005-02-17  Benhur Stein <benhur@inf.ufsm.br>
	* Make sure Shapes&Sizes tool is informed when trace hierarchy
	  changes (adds an instance variable to STController, must
	  do a "make clean" before doing "make").
	* fixes bug #301194

2005-02-17  Benhur Stein <benhur@inf.ufsm.br>
	* General/NSUserDefaults+Colors.[hm]: add -doubleForKey:
	  and -setDouble:forKey: methods (should change file name as
	  it doesn't only deal with colors.
	* SpaceTimeViewer/DrawView.m: save and restore time scale in defaults
	  database

2005-01-23 (1.3.1) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
	* Add Makfiles to compile the documentation