@@ -2,74 +2,6 @@
     "## Comment" = "Do NOT change this file, Gorm maintains it";
     FirstResponder = {
 	Actions = (
-	    "alignCenter:",
-	    "alignLeft:",
-	    "arrangeInFront:",
-	    "capitalizeWord:",
-	    "checkSpelling:",
-	    "complete:",
-	    "copyFont:",
-	    "cut:",
-	    "deleteBackward:",
-	    "deleteToBeginningOfLine:",
-	    "deleteToEndOfLine:",
-	    "deleteToMark:",
-	    "deleteWordForward:",
-	    "deselectAll:",
-	    "hide:",
-	    "indent:",
-	    "lowerBaseline:",
-	    "makeKeyAndOrderFront:",
-	    "miniaturizeAll:",
-	    "moveBackwardAndModifySelection:",
-	    "moveDownAndModifySelection:",
-	    "moveForwardAndModifySelection:",
-	    "moveRight:",
-	    "moveToBeginningOfLine:",
-	    "moveToEndOfDocument:",
-	    "moveToEndOfParagraph:",
-	    "moveUpAndModifySelection:",
-	    "moveWordBackwardAndModifySelection:",
-	    "moveWordForwardAndModifySelection:",
-	    "ok:",
-	    "openDocument:",
-	    "orderFront:",
-	    "orderFrontDataLinkPanel:",
-	    "orderFrontStandardAboutPanel:",
-	    "orderOut:",
-	    "pageUp:",
-	    "pasteAsPlainText:",
-	    "pasteFont:",
-	    "performClose:",
-	    "performZoom:",
-	    "raiseBaseline:",
-	    "runPageLayout:",
-	    "saveAllDocuments:",
-	    "saveDocumentAs:",
-	    "scrollLineDown:",
-	    "scrollPageDown:",
-	    "scrollViaScroller:",
-	    "selectLine:",
-	    "selectParagraph:",
-	    "selectText:",
-	    "selectWord:",
-	    "showGuessPanel:",
-	    "showWindow:",
-	    "subscript:",
-	    "swapWithMark:",
-	    "takeFloatValueFrom:",
-	    "takeObjectValueFrom:",
-	    "terminate:",
-	    "toggle:",
-	    "toggleRuler:",
-	    "toggleTraditionalCharacterShape:",
-	    "transposeWords:",
-	    "turnOffLigatures:",
-	    "unhide:",
-	    "unscript:",
-	    "useAllLigatures:",
-	    "useStandardLigatures:",
-	    "zoom:",
 	    "stepperChanged:",
 	    "switchChanged:"
 	);
@@ -91,13 +23,14 @@
 	    highlightMatrix,
 	    drawMatrix,
 	    shapeMatrix,
-	    fields,
+	    dimensionsForm,
 	    stepper0,
 	    stepper1,
-	    switch0,
-	    matrices,
-	    otherFieldsBox,
-	    otherFields
+	    displayValueOnEntitySwitch,
+	    matricesBox,
+	    varDimensionsBox,
+	    varDimensionsForm,
+	    dimensionsBox
 	);
 	Super = NSObject;
     };
